// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row centered renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: center;
  grid-column: 1 / -1;
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row fullsize renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: inherit;
  grid-column: 1 / -1;
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row only one item left renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > * {
    grid-column: 1;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row only one item right renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > * {
    grid-column: 2;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: center;
  grid-column: 1 / -1;
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with big item left renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-column: 1 / -6;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with big item right renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-column: 6 / -1;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with one item down left renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > *:first-child {
    margin-top: 11vw;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with one item down right renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > *:last-child {
    margin-top: 11vw;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with two equal sized items aligned to center renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with two equal sized items aligned to end renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with two equal sized items aligned to start renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with two equal sized items renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with variable amount of items aligned to center renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with variable amount of items aligned to end renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with variable amount of items aligned to start renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;

exports[`Row with variable amount of items renders correctly 1`] = `
.c0 {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

<section
  class="c0"
>
  <div
    class="c1"
  />
</section>
`;
